# HealthClawApi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_agent_foundation.py  0003_continuity_runtime.py  0004_memory_substrate.py  0005_rituals_heartbeat.py  0006_user_memory_documents.py  0007_autonomous_memory_evolution.py  0008_relationship_telemetry.py  0009_accounts.py  0010_soft_schemas.py  0011_sensing_layer.py  0012_ws6_motives_metrics_audit.py  0013_ws7_naturalness_pass.py
k8s/: api-deployment.yaml  api-service.yaml  hpa.yaml  namespace.yaml  worker-deployment.yaml
scripts/: local_bot.py
src/healthclaw/: main.py
src/healthclaw/agent/: anticipation.py  continuity.py  (+13 more)
tests/: conftest.py  factories.py  test_accounts.py  test_actions_executor.py  test_actions_schema.py  test_anticipation.py  test_api.py  test_consolidator.py  test_context_harness.py  test_continuity.py  test_decision.py  test_dream_rhythm.py  test_engagement_metrics.py  test_episode_gate.py  test_extraction_observability.py  test_heartbeat_internal.py  test_heartbeat_profile.py  test_hybrid_retriever.py  test_memory_extractors.py  test_memory_governance.py  test_motives.py  test_no_regex_understanding.py  test_openrouter.py  test_proactivity.py  test_response.py  test_safety.py  test_salience.py  test_salience_with_motives.py  test_signal_bus.py  test_skill_activator.py  test_soul.py  test_speech_gate.py  test_streaks.py  test_tavily.py  test_telegram.py  test_thread_digest.py  test_time_context.py  test_time_context_extended.py  test_time_truth_gated.py  test_token_budget.py  (+4 more)
(+96 files in other folders)
