[project]
name = "healthclaw-api"
version = "0.1.0"
description = "Healthclaw wellness companion API and agent runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-sdk>=1.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "SQLAlchemy>=2.0.32",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6",
  "pgvector>=0.3.0",
  "arq>=0.26.0",
  "croniter>=2.0.0",
  "cryptography>=42.0.0",
  "pyjwt>=2.8.0",
  # WS6: memory/context + motives + skills + web search
  "tiktoken>=0.7.0",
  "cohere>=5.0.0",
  "tavily-python>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2",
  "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthclaw"]

[tool.hatch.build.targets.wheel.force-include]
"src/healthclaw/agent/prompts" = "healthclaw/agent/prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]
